// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractDependencies() extracts engines 1`] = `
Object {
  "deps": Array [
    Object {
      "currentVersion": "1.6.0",
      "depName": "angular",
      "depType": "dependencies",
      "purl": "pkg:npm/angular",
    },
    Object {
      "currentVersion": "1.6.0",
      "depName": "@angular/cli",
      "depType": "devDependencies",
      "purl": "pkg:npm/%40angular/cli",
    },
    Object {
      "currentVersion": "*",
      "depName": "foo",
      "depType": "devDependencies",
      "purl": "pkg:npm/foo",
      "skipReason": "any-version",
    },
    Object {
      "currentVersion": "file:../foo/bar",
      "depName": "bar",
      "depType": "devDependencies",
      "skipReason": "file",
    },
    Object {
      "currentVersion": "latest",
      "depName": "other",
      "depType": "devDependencies",
      "skipReason": "unknown-version",
    },
    Object {
      "currentVersion": ">= 8.9.2",
      "depName": "node",
      "depType": "engines",
      "purl": "pkg:github/nodejs/node",
    },
    Object {
      "currentVersion": "1.7.0",
      "depName": "yarn",
      "depType": "engines",
      "purl": "pkg:github/yarnpkg/yarn",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": undefined,
  "packageJsonType": "app",
  "packageJsonVersion": undefined,
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds a lock file 1`] = `
Object {
  "deps": Array [
    Object {
      "currentVersion": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "purl": "pkg:npm/autoprefixer",
    },
    Object {
      "currentVersion": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "purl": "pkg:npm/bower",
    },
    Object {
      "currentVersion": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify",
    },
    Object {
      "currentVersion": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify-css",
    },
    Object {
      "currentVersion": "0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "purl": "pkg:npm/cheerio",
    },
    Object {
      "currentVersion": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "purl": "pkg:npm/config",
    },
    Object {
      "currentVersion": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-touch",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-sanitize",
    },
    Object {
      "currentVersion": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "purl": "pkg:npm/%40angular/core",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": "yarn.lock",
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds complex yarn workspaces 1`] = `
Object {
  "deps": Array [],
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "@a/b",
  "packageJsonType": "app",
  "packageJsonVersion": "0.0.8",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": Array [
    "packages/*",
  ],
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() finds lerna 1`] = `
Object {
  "deps": Array [
    Object {
      "currentVersion": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "purl": "pkg:npm/autoprefixer",
    },
    Object {
      "currentVersion": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "purl": "pkg:npm/bower",
    },
    Object {
      "currentVersion": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify",
    },
    Object {
      "currentVersion": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify-css",
    },
    Object {
      "currentVersion": "0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "purl": "pkg:npm/cheerio",
    },
    Object {
      "currentVersion": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "purl": "pkg:npm/config",
    },
    Object {
      "currentVersion": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-touch",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-sanitize",
    },
    Object {
      "currentVersion": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "purl": "pkg:npm/%40angular/core",
    },
  ],
  "lernaClient": "npm",
  "lernaDir": ".",
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;

exports[`manager/npm/extract .extractDependencies() returns an array of dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentVersion": "6.5.0",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "purl": "pkg:npm/autoprefixer",
    },
    Object {
      "currentVersion": "~1.6.0",
      "depName": "bower",
      "depType": "dependencies",
      "purl": "pkg:npm/bower",
    },
    Object {
      "currentVersion": "13.1.0",
      "depName": "browserify",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify",
    },
    Object {
      "currentVersion": "0.9.2",
      "depName": "browserify-css",
      "depType": "dependencies",
      "purl": "pkg:npm/browserify-css",
    },
    Object {
      "currentVersion": "0.22.0",
      "depName": "cheerio",
      "depType": "dependencies",
      "purl": "pkg:npm/cheerio",
    },
    Object {
      "currentVersion": "1.21.0",
      "depName": "config",
      "depType": "dependencies",
      "purl": "pkg:npm/config",
    },
    Object {
      "currentVersion": "^1.5.8",
      "depName": "angular",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-touch",
    },
    Object {
      "currentVersion": "1.5.8",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "purl": "pkg:npm/angular-sanitize",
    },
    Object {
      "currentVersion": "4.0.0-beta.1",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "purl": "pkg:npm/%40angular/core",
    },
  ],
  "lernaClient": undefined,
  "lernaDir": undefined,
  "lernaPackages": undefined,
  "npmLock": undefined,
  "npmrc": undefined,
  "packageJsonName": "renovate",
  "packageJsonType": "app",
  "packageJsonVersion": "1.0.0",
  "pnpmShrinkwrap": undefined,
  "yarnLock": undefined,
  "yarnWorkspacesPackages": undefined,
  "yarnrc": undefined,
}
`;
